# CmdPad

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs
src/components/: AddCommandForm.tsx  CommandCard.tsx  ImportDialog.tsx  SearchBar.tsx
src/store/: useStore.ts
src/types/: index.ts
src/utils/: clipboardState.ts
